--- a/web/app.html
+++ b/web/app.html
@@ -101,7 +101,7 @@
 
         //显示相应的文章
         content.innerHTML = `<h1>Article ${index + 1}</h1><p>This is the content of Article ${index + 1}.</p>`;
-        fetch(`/document/${index}`)
+        fetch('https://ayiinnn.github.io/project/src/test.html')
         .then(response => {
         console.log('Response received', response);
         if (!response.ok) {
